# letterboxd-2-jellyfin

./: CONTRIBUTING.md  README.md  pyproject.toml
letterboxd2jellyfin/: __main__.py
